twisted (14.0.0-2pexip1) pexip; urgency=low

  * New upstream release. Debian is now upstream.

 -- John-Mark Bell <jmb@pexip.com>  Wed, 20 Aug 2014 21:31:25 +0100

twisted (14.0.0-2) unstable; urgency=medium

  * python-twisted-core: Depend on python-openssl and python-service-identity.

 -- Matthias Klose <doko@debian.org>  Wed, 23 Jul 2014 15:39:02 +0200

twisted (14.0.0-1) unstable; urgency=medium

  * New upstream release

 -- Matthias Klose <doko@debian.org>  Mon, 14 Jul 2014 13:49:08 +0200

twisted (14.0.0~20140122svn41413-0pexip1) pexip; urgency=low

  * Snapshot 14.0.0 SVN.

 -- John-Mark Bell <jmb@pexip.com>  Wed, 22 Jan 2014 19:05:32 +0000

twisted (13.2.0-1ubuntu1pexip1) pexip; urgency=low

  * Prepare Pexip packaging

 -- John-Mark Bell <jmb@pexip.com>  Wed, 22 Jan 2014 18:44:39 +0000

twisted (13.2.0-1) unstable; urgency=medium

  * New upstream release.

 -- Matthias Klose <doko@debian.org>  Tue, 07 Jan 2014 23:52:50 +0100

twisted (13.1.0-1) unstable; urgency=low

  * New upstream release
  * Migrate to single-source

 -- Free Ekanayaka <freee@debian.org>  Fri, 04 Oct 2013 14:20:11 +0200

twisted (13.0.0-1) unstable; urgency=low

  * New upstream release

 -- Free Ekanayaka <freee@debian.org>  Wed, 05 Jun 2013 20:48:54 +0200

twisted (12.3.0-1) experimental; urgency=low

  * New upstream release
  * Bump python-zope.interface dependency to 3.6
  * Bump Standards-Version to 3.9.4
  * Install _initgroups.so only on Python <= 2.6
  * Drop packaging tweaks for Python < 2.6

 -- Free Ekanayaka <freee@debian.org>  Wed, 02 Jan 2013 15:15:18 +0100

twisted (12.2.0-1) experimental; urgency=low

  * New upstream version
  * Drop the _epoll.so C extension, as Twisted now supports only
    Python >= 2.6 and there's stdlib support for epoll since 2.6
  * Add sendmsg.so C extension to python-twisted-bin

 -- Free Ekanayaka <freee@debian.org>  Tue, 11 Sep 2012 10:06:25 +0200

twisted (12.0.0-1) sid; urgency=low

  * New upstream version.
  * Add watch file