@@ -7,8 +7,7 @@ PYVERS	:= $(shell pyversions -vs)
 VER	:= $(shell /usr/bin/python -c 'import sys; print sys.version[:3]')
 DEBVERS := $(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
 
-# twversion := $(subst twisted-,,$(notdir $(CURDIR)))
-twversion := 13.2.0
+twversion := $(subst twisted-,,$(notdir $(CURDIR)))
 
 include /usr/share/python/python.mk
 
@@ -109,18 +108,18 @@ install-python%: install-prereq
 
 install-nover:
 	: # man pages
-	#for i in conch core lore mail; do \
-	#    mkdir -p debian/python-twisted-$$i/usr/share/man/man1; \
-	#    for j in doc/$$i/man/*.1; do \
-	#        cp -p $$j debian/python-twisted-$$i/usr/share/man/man1/; \
-	#    done; \
-	#done
+	for i in conch core lore mail; do \
+	    mkdir -p debian/python-twisted-$$i/usr/share/man/man1; \
+	    for j in doc/$$i/man/*.1; do \
+	        cp -p $$j debian/python-twisted-$$i/usr/share/man/man1/; \
+	    done; \
+	done
 
 	: # python-twisted-conch
 	mv debian/python-twisted-conch/usr/bin/cftp \
 		debian/python-twisted-conch/usr/bin/conchftp
-	#mv debian/python-twisted-conch/usr/share/man/man1/cftp.1 \
-	#	debian/python-twisted-conch/usr/share/man/man1/conchftp.1
+	mv debian/python-twisted-conch/usr/share/man/man1/cftp.1 \
+		debian/python-twisted-conch/usr/share/man/man1/conchftp.1
 
 	: # twisted-doc
 	mkdir -p debian/twisted-doc/usr/share/doc/twisted-doc
